--- a/Current/Current/Current.csproj
+++ b/Current/Current/Current.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Enemy.cs" />
     <Compile Include="FileManager.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="GameManager.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="Goal.cs" />
     <Compile Include="HealthPickup.cs" />
