--- a/Current/Current/Current.csproj
+++ b/Current/Current/Current.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScorePickup.cs" />
     <Compile Include="Tile.cs" />
+    <Compile Include="UIObject.cs" />
     <Compile Include="Volume.cs" />
     <Compile Include="Water.cs" />
     <Compile Include="WaterCurrent.cs" />
