--- a/Current/Current/Current.csproj
+++ b/Current/Current/Current.csproj
@@ -64,7 +64,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScorePickup.cs" />
     <Compile Include="Tile.cs" />
+    <Compile Include="UIManager.cs" />
     <Compile Include="UIObject.cs" />
+    <Compile Include="UIText.cs" />
     <Compile Include="Volume.cs" />
     <Compile Include="Water.cs" />
     <Compile Include="WaterCurrent.cs" />
