--- a/Current/Current/Current.csproj
+++ b/Current/Current/Current.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaveTile.cs" />
+    <Compile Include="Score.cs" />
     <Compile Include="ScorePickup.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="UIButton.cs" />
