camera class added and started - (does not work in its current state)

--- a/Current/Current/Current.csproj
+++ b/Current/Current/Current.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Animate.cs" />
     <Compile Include="Background.cs" />
+    <Compile Include="Camera.cs" />
     <Compile Include="Catfish.cs" />
     <Compile Include="CheckPoint.cs" />
     <Compile Include="CollidableObject.cs" />
