--- a/Current/Current/Current.csproj
+++ b/Current/Current/Current.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="GameSaver.cs" />
     <Compile Include="Goal.cs" />
     <Compile Include="HealthBar.cs" />
     <Compile Include="HealthPickup.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SavedData.cs" />
     <Compile Include="SaveTile.cs" />
     <Compile Include="Score.cs" />
     <Compile Include="ScorePickup.cs" />
@@ -83,7 +85,7 @@
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
