Partial implementation of diagonal movement.

--- a/Current/Current/Current.csproj
+++ b/Current/Current/Current.csproj
@@ -60,6 +60,7 @@
     <Compile Include="HUD.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="Landcat.cs" />
+    <Compile Include="Laser.cs" />
     <Compile Include="MovingPlatform.cs" />
     <Compile Include="Pickup.cs" />
     <Compile Include="Platform.cs" />
